# AndroidStudyNotes

./: .gitignore  README.md  build.gradle  settings.gradle
TestJni/: build.gradle
TestJni/src/main/: AndroidManifest.xml
TestJni/src/main/cpp/: hello-jnicallback.c
TestJni/src/main/res/layout/: activity_main.xml
app/: KeyStore.jks  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/animator/: color.xml  to_triangle.xml
app/src/main/res/drawable/: animated_square.xml  square.xml  vector_drawable_svgcircle.xml
app/src/main/res/layout/: activity_itemtouchhelper.xml  activity_main.xml  activity_main2.xml  activity_main22.xml  activity_main3.xml  activity_swipedismissbehavior.xml  content_main.xml  content_main1.xml  content_main2.xml  content_main22.xml  item.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: pref_headers.xml
citypicker/src/main/assets/: china_cities.db
doc/: bookmarks_2017_3_18.html  bookmarks_2017_4_1.html  bookmarks_2017_4_8.html  linkC++Project.md
gradle/wrapper/: gradle-wrapper.properties
helloLibs/: build.gradle
helloLibs/src/main/cpp/: CMakeLists.txt
hellojni/: build.gradle
hellojni/src/main/: AndroidManifest.xml
hellojni/src/main/cpp/: CMakeLists.txt  hello-jni.c
hellojni/src/main/res/layout/: activity_hello_jni.xml
jniCallback/: build.gradle
jniCallback/src/main/: AndroidManifest.xml
jniCallback/src/main/cpp/: hello-jnicallback.c
(+53 files in other folders)
